Refactor computeScore method